--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -27,4 +27,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: sudo apt install python2 g++ make -y
+    - run: sudo apt install yarn -y
     
