--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -28,4 +28,5 @@ jobs:
         cache: 'npm'
     - run: sudo apt install python2 g++ make -y
     - run: sudo apt install yarn -y
+    - run: yarn install --production
     
