--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -30,5 +30,6 @@ jobs:
     - run: sudo apt install yarn -y
     - run: yarn install --production
     - run: sudo node src/index.js
-
+    - run: sleep 10
+    - run: pkill node
     
