--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -29,7 +29,7 @@ jobs:
     - run: sudo apt install python2 g++ make -y
     - run: sudo apt install yarn -y
     - run: yarn install --production
-    - run: sudo node src/index.js
+    - run: sudo node src/index.js &
     - run: sleep 10
     - run: pkill node
     
