--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -26,23 +23,22 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: sudo apt install python2 g++ make -y
-    - run: sudo apt install yarn -y
-    - run: yarn install --production
-
-
-
-
-
+        
+    - name: install dependencies
+      run: |
+        sudo apt install python2 g++ make -y
+        sudo apt install yarn -y
+        yarn install --production
 
     - name: Docker Build & Push Action
-    - uses: mr-smithers-excellent/docker-build-push@v6.3
-    - with:
-        image: jubuitrago/jubuitrag
+      uses: mr-smithers-excellent/docker-build-push@v6.3
+      with:
+        image: jubuitrago/jubuitrago
         tags: latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
             
     
     
