--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -1,10 +1,14 @@
-name: Node.js CI
+name: CI Workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
 
 jobs:
   build:
@@ -37,6 +41,15 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+
+
+  #deploy:
+   # runs-on: ubuntu-latest
+    #needs: build
+    #steps:
+   #- name: Deploy app
+   #   run: |
+   #     ssh user@server
 
             
     
