--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -39,8 +39,8 @@ jobs:
         curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
         echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
         sudo apt-get update
-        sudo apt-get install yarn -y
-        yarn install
+        sudo apt-get install -y yarn
+        yarn install -y
 
     - name: Docker Build & Push Action
       uses: mr-smithers-excellent/docker-build-push@v6.3
