--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -52,13 +52,13 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
 
-  #deploy:
-   # runs-on: ubuntu-latest
-    #needs: build
-    #steps:
-   #- name: Deploy app
-   #   run: |
-   #     ssh user@server
+  deploy:
+    runs-on: self-hosted
+    needs: build
+    steps:
+    - name: Deploy app
+      run: |
+        docker info
 
             
     
