--- a/.github/workflows/CI_workflow.yml
+++ b/.github/workflows/CI_workflow.yml
@@ -59,7 +59,7 @@ jobs:
 
   deploy:
     runs-on: self-hosted
-    needs: test
+    needs: export-image
     if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request' && github.base_ref == 'main'
     steps:
       - name: Deploy app
